# METIS

./: BUILD-Windows.txt  CMakeLists.txt  Makefile  README.md  install_metis_python_linux.sh
include/: CMakeLists.txt
libmetis/: CMakeLists.txt  defs.h  kmetis.c  ometis.c  pmetis.c
programs/: CMakeLists.txt  cmdline_gpmetis.c  cmdline_m2gmetis.c  cmdline_mpmetis.c  cmdline_ndmetis.c  gpmetis.c  m2gmetis.c  mpmetis.c  ndmetis.c
